[package]
name = "meek"
version = "0.1.0"
authors = ["Zachary Boehm <zboehm@menard-inc.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.1", features = ["router", "fullstack"] }
lucide-dioxus = "1.1.0"
short-uuid = "0.1.4"
strum = { version = "0.26.3", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4"] }

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
