[package]
name = "meek"
version = "0.1.0"
authors = ["Zachary Boehm <zboehm@menard-inc.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.1", features = ["router", "fullstack"] }
dioxus-logger = "0.6.1"
lucide-dioxus = "1.1.0"
serde_json = "1.0.134"
short-uuid = "0.1.4"
strum = { version = "0.26.3", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4"] }
web-sys = { version = "0.3.76", features = ["HtmlDialogElement"] }

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
