[workspace]
resolver = "2"
members = [
    "aria",
    "example"
]

[workspace.dependencies]
meek-aria.path = "./aria"

dioxus = { version = "0.6.1", features = ["router", "fullstack"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
