[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus.workspace = true
meek-aria.workspace = true

dioxus-logger = "0.6.1"
lucide-dioxus = "1.1.0"
serde_json = "1.0.134"

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"